--- a/GB/pom.xml
+++ b/GB/pom.xml
@@ -66,9 +66,19 @@
 		    <version>2.9.0.pr1</version>
 		</dependency>
 		<dependency>
-    <groupId>com.fasterxml.jackson.dataformat</groupId>
-    <artifactId>jackson-dataformat-xml</artifactId>
-</dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-ooxml</artifactId>
+		  <version>3.15</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.mangofactory</groupId>
+		  <artifactId>swagger-springmvc</artifactId>
+		  <version>1.0.2</version>
+		</dependency>
         <dependency>
 		    <groupId>javax.ws.rs</groupId>
 		    <artifactId>javax.ws.rs-api</artifactId>
